--- a/administracion/templates/index.html
+++ b/administracion/templates/index.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+{% include 'dolar.html' %}
+
 {% if principal != '' %}
 <!--Post principal-->
 <div class="slide-one-item home-slider owl-carousel">
