--- a/cuentas/templates/perfil.html
+++ b/cuentas/templates/perfil.html
@@ -28,22 +28,22 @@
                 </div>
                 <div class="d-flex justify-content-center">
                     <p class="social mb-3">
-                        {% if perfil.facebook == null %}
+                        {% if perfil.facebook == '' %}
                             <i class="fa-brands fa-facebook p-2 fa-lg"></i>
                         {% else %}
                             <a href="{{ perfil.facebook }}" class="p-2"><i class="fa-brands fa-facebook fa-lg"></i></a>
                         {% endif %}
-                        {% if perfil.twitter == null %}                               
+                        {% if perfil.twitter == '' %}                               
                             <i class="fa-brands fa-twitter p-2 fa-lg" ></i>
                         {% else %}
                             <a href="{{ perfil.twitter }}" class="p-2"><i class="fa-brands fa-twitter fa-lg"></i></a>
                         {% endif %}
-                        {% if perfil.instagram == null %}
+                        {% if perfil.instagram == '' %}
                             <i class="fa-brands fa-instagram p-2 fa-lg"></i>
                         {% else %}
                             <a href="{{ perfil.instagram }}" class="p-2"><i class="fa fa-instagram fa-lg"></i></a>
                         {% endif %}
-                        {% if perfil.web == null %}
+                        {% if perfil.web == '' %}
                             <i class="fa-solid fa-link p-2 fa-lg"></i>
                         {% else %}
                             <a href="{{ perfil.web }}" class="p-2"><i class="fa-solid fa-link fa-lg"></i></a>
