--- a/posts/templates/post.html
+++ b/posts/templates/post.html
@@ -64,22 +64,22 @@
                             <p class="mb-4">{{ post.autor.perfil.descripcion }}</p>
                             {% endif %}
                             <p class="social mb-3">
-                                {% if post.autor.perfil.facebook == null %}
+                                {% if post.autor.perfil.facebook == '' %}
                                     <i class="fa-brands fa-facebook p-2 fa-2x"></i>
                                 {% else %}
                                     <a href="{{ post.autor.perfil.facebook }}" class="p-2"><i class="fa-brands fa-facebook fa-2x"></i></a>
                                 {% endif %}
-                                {% if post.autor.perfil.twitter == null %}                               
+                                {% if post.autor.perfil.twitter == '' %}                               
                                     <i class="fa-brands fa-twitter p-2 fa-2x" ></i>
                                 {% else %}
                                     <a href="{{ post.autor.perfil.twitter }}" class="p-2"><i class="fa-brands fa-twitter fa-2x"></i></a>
                                 {% endif %}
-                                {% if post.autor.perfil.instagram == null %}
+                                {% if post.autor.perfil.instagram == '' %}
                                     <i class="fa-brands fa-instagram p-2 fa-2x"></i>
                                 {% else %}
                                     <a href="{{ post.autor.perfil.instagram }}" class="p-2"><i class="fa fa-instagram fa-2x"></i></a>
                                 {% endif %}
-                                {% if post.autor.perfil.web == null %}
+                                {% if post.autor.perfil.web == '' %}
                                     <i class="fa-solid fa-link p-2 fa-2x"></i>
                                 {% else %}
                                     <a href="{{ post.autor.perfil.web }}" class="p-2"><i class="fa-solid fa-link fa-2x"></i></a>
