--- a/administracion/templates/base.html
+++ b/administracion/templates/base.html
@@ -77,7 +77,8 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a href="{% url 'base:mision_and_vision' %}" class="dropdown-item">Misión y Visión</a></li>
                   <li><a href="" class="dropdown-item">Historia</a></li>
-                  <li><a href="" class="dropdown-item">Miembros</a></li>
+                  <li><a href="{% url 'base:miembros' %}" class="dropdown-item">Miembros</a></li>
+                  <li><a href="{% url 'base:contacto' %}" class="dropdown-item">Contacto</a></li>
                 </ul>
               </li>             
                        
