--- a/administracion/templates/dolar.html
+++ b/administracion/templates/dolar.html
@@ -1,18 +1,22 @@
 {% block dolar %}
 
 <marquee behavior="" direction="">
-<table class="table table-bordered border-primary">
-    <tr style="border:2px solid;">
+<table class="table table-borderless">
+    <tr>
     {% for d in dolar  %}
         <td><b style="color:blue">{{d.casa.nombre}}</b></td>
         <td>            
-            {% if d.casa.nombre == 'Dolar Soja' %}
-                Compra {{d.casa.compra}}            
+            {% if d.casa.compra == 'No Cotiza' %}
+                Compra: {{d.casa.compra}}            
             {% else %}  
                 Compra ${{d.casa.compra}}
             {% endif %}
         </td>
-        <td>Venta ${{d.casa.venta}}</td>
+        <td>{% if d.casa.venta == 'No Cotiza' %}
+                Venta: {{d.casa.venta}}</td>
+            {% else %}
+                Venta ${{d.casa.venta}}</td>
+            {% endif %}
         <td><i class="fa-solid fa-circle"></i></td>
     {% endfor %}
     </tr>
