--- a/posts/templates/porcategorias.html
+++ b/posts/templates/porcategorias.html
@@ -5,29 +5,33 @@
 {% block content %}
 
 {% if listaposts %}
-       
-        <div class="">
-            <div class="container">
-                    <h2 style="color:rgb(4, 67, 122);">Post filtrados por categoría: {{categoria}}</h2>
-                    {% for p in listaposts %}
-                    {% if forloop.first %} <div class="row align-items-stretch retro-layout mt-3"> {% endif %}                    
-                    <div class="col-4">
-                        <a href="{% url 'posts:detalle_post' p.slug %}" class="hentry v-height img-2 ml-auto" style="background-image: url({{ p.imagen_referencial.url }});">
-                            <span class="post-category text-white bg-info">{{ p.categoria |upper }}</span>
-                            <div class="text text-sm">
-                              <h2>{{ p.titulo }}</h2>
-                              <span>{{ p.fecha_publicacion }}</span>
-                            </div>
-                        </a>
-                    </div>
-                    {% if forloop.counter|divisibleby:3 %}</div><div class="row align-items-stretch retro-layout mt-3">{% endif %}
-                    {% if forloop.last %}</div></div>{% endif %}
-                    {% endfor %}
-                               
-            </div>            
-        </div>     
-        
-    
+
+<div class="container">
+    <h2 style="color:rgb(4, 67, 122);">Post filtrados por categoría: {{categoria}}</h2>
+    {% for p in listaposts %}
+    {% if forloop.first %}
+    <div class="row align-items-stretch retro-layout mt-3"> {% endif %}
+        <div class="col-lg-4 col-sm-4 mt-3 mb-3">
+            <a href="{% url 'posts:detalle_post' p.slug %}" class="hentry v-height img-2 ml-auto"
+                style="background-image: url({{ p.imagen_referencial.url }});">
+                <span class="post-category text-white bg-info">{{ p.categoria |upper }}</span>
+                <div class="text text-sm">
+                    <h2>{{ p.titulo }}</h2>
+                    <span>{{ p.fecha_publicacion }}</span>
+                </div>
+            </a>
+        </div>
+        {% if forloop.counter|divisibleby:3 %}
+    </div>
+    <div class="row align-items-stretch retro-layout mt-3">{% endif %}
+        {% if forloop.last %}</div>
+</div>{% endif %}
+{% endfor %}
+
+</div>
+
+
+
 {% else %}
 <div class="container mt-5 mb-5">
     <div class="alert alert-danger d-flex align-items-center" role="alert">
@@ -41,7 +45,7 @@
 </div>
 
 
-    
+
 {% endif %}
 
 {% include 'paginacion.html' %}
