--- a/posts/templates/basepost.html
+++ b/posts/templates/basepost.html
@@ -171,7 +171,7 @@
                             </div>
                         {% endif %}
                         <div class="d-flex align-items-end p-1">
-                            <form class="form-horinzontal" action="{% url 'posts:comentlike' post.slug child_comment.pk %}" method="post">
+                            <form onsubmit="return" class="form-horinzontal" action="{% url 'posts:comentlike' post.slug child_comment.pk %}" method="post">
                                 
                                 {% csrf_token %}
                                 <input type="hidden" name="next" value="{{ request.path }}">
@@ -193,12 +193,26 @@
                                 </button>
                             </form>
                         </div>
-                        
+                        <div class="d-flex align-items-end p-1">
+                            <button class="btn btn-outline-primary redondeado {% if not user.is_authenticated %} disabled{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapseResponderComentarioHijo{{child_comment.pk}}">
+                                <i class="fa-regular fa-message"></i>
+                            </button>
+                        </div>
+                    
                        
                         
                     </div>        
                 </article>  
             </div>
+            <div class="collapse" id="collapseResponderComentarioHijo{{child_comment.pk}}">
+                <div class="card-body">
+                    <form action="{% url 'posts:respondercoment' post.slug coment.id %}" method="post">
+                        {% csrf_token %}                                                 
+                        {{ form | crispy }}
+                        <button type="submit" class="btn btn-primary redondeado">Publicar</button>
+                    </form>
+                </div>               
+            </div> 
             {% endfor %}
         </div>  
     </div>
